kubernetes/entrenapp/supertokens/01-supertokens-authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supertokens-authentication-server
  namespace: entrenapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supertokens-authentication-server
  template:
    metadata:
      labels:
        app: supertokens-authentication-server
    spec:
      containers:
      - name: supertokens-authentication-server
        image: uriart/supertokens-authentication:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
