kubernetes/entrenapp/supertokens/03-supertokens-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supertokens-core
  namespace: entrenapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supertokens-core
  template:
    metadata:
      labels:
        app: supertokens-core
    spec:
      containers:
      - name: supertokens-core
        image: registry.supertokens.io/supertokens/supertokens-postgresql:7.0
        ports:
        - containerPort: 3567
