kubernetes/entrenapp/supertokens/02-supertokens-authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supertokens-authentication-service
  namespace: entrenapp
spec:
  selector:
    app: supertokens-authentication-server
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
