kubernetes/entrenapp/supertokens/04-supertokens-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supertokens-core-service
  namespace: entrenapp
spec:
  selector:
    app: supertokens-core
  ports:
    - protocol: TCP
      port: 3567
      targetPort: 3567
