kubernetes/entrenapp/supertokens/05-ingress-authentication-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-authentication-server
  namespace: entrenapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: uriart.sytes.net
    http:
      paths:
      - path: /supertokens-backend(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: supertokens-authentication-service
            port: 
              number: 3001
  tls:
  - hosts:
    - uriart.sytes.net
    secretName: cert-tls
